[package]
name = "inst-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
redis = "0.27"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
num-complex = "0.4"

[profile.release]
opt-level = 2
lto = true
strip = true
